# GenAI

DeepSeekGradioApp/: install.bat  program.py
DeepSeekGradioApp2/: program.py
DeepSeekOCRGradioApp/: program.py
EventManagementServer/: EventManagementServer.sln
EventManagementServer/EventManagementServer/: CHANGELOG.md  app.js  package-lock.json  package.json
GradioChatbot/: app.py  install.bat
GradioChatbot/businesslayer/: chatbot.py  config.py  utils.py
MathOCRGradioApp/: install.bat  program.py
PRAPIMCP/: pr_analyzer.py  pyproject.toml  requirements.txt
PRHTTPMCP/: main.py  pr_analyzer.py  pyproject.toml  requirements.txt
PRMCP/: .env  pyproject.toml  requirements.txt
RAGGradioApp/: install.bat  program.py
WeatherMCP/src/mcp_weather_server/: server-see.py
WeatherMCP/src/mcp_weather_server.egg-info/: PKG-INFO
