[project]
name = "prmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.0",
    "fastapi>=0.116.0",
    "fastmcp>=2.10.0",
    "uvicorn>=0.35.0",
    "notion-client>=2.4.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]